# localsearch-pro

./: README.md  index.html  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: preview.rs  search.rs
src-tauri/src/core/: index_manager.rs
src/components/: FilterBar.tsx  FirstRunWizard.tsx  PreviewPanel.tsx  SplashScreen.tsx  StatusBar.tsx
src/hooks/: useSearch.ts
src/types/: index.ts
