[package]
name = "deepsearch"
version = "0.1.0"
description = "DeepSearch - 本地文件智能检索工具"
authors = ["you"]
edition = "2021"

[lib]
name = "deepsearch_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# File system
walkdir = "2"
dirs = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
open = "5"
winreg = "0.55"
encoding_rs = "0.8"
uuid = { version = "1", features = ["v4"] }

# Encoding
base64 = "0.22"

# Archive (PPTX extraction)
zip = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"
